css/_genrtor.css
.main{
    padding:  70vw, 25vw;
    display: none;
    flex-direction: row;
    align-self: center;
}

.imgPool {
    /* width: 60vw; */
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-content: center;
    overflow: hidden;
    padding: 0 10vw;
}
.singalImg{
    margin: 3vw 2vw 1vw 0;
        width: 13vw;
        height: 13vw;
    overflow: hidden;
    -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);    
    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
}
.singalImg img{
  height: 100%;
}
.singalImg img:hover {
   border: .1vw solid black;
   cursor: pointer;   
}

.search{
    display: flex;
    justify-content: space-around;
    align-content: center;
    flex: 1;
    margin: 2vw auto ;
    color: var(--main-color);
    font-size: 2vw;
    width: 100%;
    max-width: 800px;
    font-weight: bold;
}
.search button{
    background-color: var(--main-color);
    padding: 1em;
    border: none;
    color: white;
    font-size: 1vw;
}
.search button:hover{
  cursor: pointer;
  outline: 1px rgb(14, 80, 63) solid;
}
.keywords-cloud{
    margin-top: 4vw;
    display: flex;
    justify-content: flex-start;
    flex: 1;
    opacity: .9;
    background-color: var(--secondary-bg);
    width: 70vw;
    position: absolute;
    flex-wrap: wrap;
    z-index: 1;
}
.key-word{
    font-size: .5em;
}
.key-word span{
    display: flex;
    /* background: var(--main-color); */
    color: var(--main-color);
    padding: 1vw;
    /* height: 4em; */
    cursor: pointer;
    /* margin: 1vw; */
}
 .meme-name{
    position: absolute;
    padding: 7vw 0 0 1vw;
    font-size: 1em;
    width: 12vw;
    height: 13vw;
    background-color: black;
    opacity: .7;
    color: white;
    display: none;
}
img +.meme-name:hover{
    display: block;
}
.generatorPanel {
    width: 45vw;
    display: flex;  
    flex-direction: column; 
    flex-wrap: nowrap;
    justify-content:space-around;
    /* align-items: center;  */
    font-family: 'Lato', sans-serif;
    font-weight: bold; 
    /* overflow:auto; */
    padding: 1%;

}
.generatorPanel button {
    background-color: var(--main-color);
    border: .1vw solid black;
    color: white;
    padding: 5%;
    text-align: center;
    text-decoration: none;
    font-size: 1.1em;
    cursor: pointer;
    max-width: 80px; 
    float: left; 
    max-height: 50px;
    box-sizing: border-box; 
    display: flex;
    justify-content: center;
    font-family: 'Lato', sans-serif;
    font-weight: bold;  

}
.generatorPanel input {
  color: blue;
  max-width: 150px;
  align-self: center;
   font-family: 'Lato', sans-serif; 
   font-weight: bold;
}
#canvas {
    margin: 0 auto;
    padding: 0;
}

.font-change{
    min-height: 2em;
    max-width: 10em;
     font-family: 'Lato', sans-serif;
     font-weight: bold; 
}

.shadow {
    color: white;
    text-shadow: 2px 2px 4px #000000;
    text-align: center;
    display: flex;
    justify-content: center;
    font-family: 'Lato', sans-serif; 
    font-weight: bold;
}
.memeGenerator {
    display: flex;
    flex: 0;
    flex-direction: row;
    width: 98vw;
    justify-content: space-between;
}

#textToCanvas {
    border:.3vw solid #456879;
    background: bisque;
    color: black;
	border-radius:1vw;
	height: 5vw;
    width: 60%;
    font-size: 2em; 
    /* max-width: 450px; */
    margin: 3vh 0;
    margin-bottom: 1vh;
    position: relative;
}
.generatorFueturs {
    padding-top: 2vw;
    background-color: var(--secondary-bg);
    height: 100%;
}
.generatorButton {
    background-color: var(--main-color);
    border: .1vw solid black;
    color: white;
    padding: .2vw;
    text-align: center;
    text-decoration: none;
    font-size: 2em;
    cursor: pointer;
    font-family: 'Lato', sans-serif; 
    font-weight: bold;
     
}

.font-change  {

    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    background-color: lightblue;
    margin: auto; 
    height: 50px;
    overflow: hidden;
    width: 50%;
    font-family: 'Lato', sans-serif;
    font-weight: bold; 
}

.generatorButtonPanel button {
   -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    background-color: lightblue;
    margin: 5px;
    width: 30%;
    min-width: 70px;
    min-height: 50;
    font-family: 'Lato', sans-serif;
    font-weight: bold; 
    box-sizing: border-box;
    
}
.generatorButton button:hover {
  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}
.generatorPanel input {
    width: 40px;
    background-color: cadetblue;
    font-family: 'Lato', sans-serif;
    font-weight: bold; 
}

 .button-bar {
    /* padding-bottom: 3vw; */
} 
#color-picker{
    width: 150%;
    border: 5px;
}

.button-bar button {
      box-shadow: 0 1vw 2vw rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
      width: 95%;  
      display: flex;
      justify-content: center;
      align-items: center;
      padding: 4%;
} 
.button-bar button:hover {
     background-color:  bisque;
}    
.remove-line{
    display: flex;
    flex-direction: row;
}
.remove-line button{
    background: red;
    padding: 1vw;
    margin: 1vw;
    font-size: .7em;
    height: 5%; 
    display: inline ;
    margin: auto;

}
.generatorButtonPanel {
    text-align: center;
    display: flex;
    flex-flow: row;
    justify-content: space-around;
    margin: 0 auto;
}

.panel {
   width: 44vw;
}

/* MOBILE */

@media (max-width: 910px) {
    .generatorButtonPanel *{
        padding: 1vw;
        }
    .search{
        justify-content: center;
        margin: 1vw auto;
    }
    .search input{
        width: 60%;
        margin: 0 auto;
    }
    .singalImg img{
        width: 100px;
        height: 100px;
    }
    .search button{
        margin: .1vw;
    }
    .imgPool{
        width: 100%;
        padding: 0;
        margin: 0 auto;
    }
    .keywords-cloud{
        margin-top: 4vw;
        display: flex;
        opacity: .9;
        background-color: var(--secondary-bg);
        width: 50vw;
        position: absolute;
        flex-wrap: wrap;
        z-index: 1;
    }
    .memeGenerator {
        display: flex;
        flex-wrap: wrap;
        flex-direction: column;
    }
    .generatorPanel {
        display: flex;
        flex-wrap: wrap; 
        width: 100%;
        height:auto;
        flex-direction: column;
        justify-content: center;
        margin: auto;
    }
    .button-bar {
        display: flex;
        flex-wrap: wrap; 
    }
    .panel {
        width: 100%;
    }
    .button-bar button {
        padding: 4%;
        min-height: 4%;
    }
}

